--- a/src/app/package.json
+++ b/src/app/package.json
@@ -101,6 +101,7 @@
     "morgan": "^1.10.0",
     "multiparty": "^4.2.1",
     "node-rsa": "^1.1.1",
+    "node-gyp": "7.1.2",
     "path-to-regexp": "^6.1.0",
     "properties": "1.2.1",
     "redis": "3.0.2",
