--- a/src/app/client/package.json
+++ b/src/app/client/package.json
@@ -130,6 +130,7 @@
     "ngx-device-detector": "4.0.1",
     "ngx-filesize": "3.0.1",
     "ngx-infinite-scroll": "^8.0.2",
+    "node-gyp": "7.1.2",
     "rxjs": "^6.5.5",
     "sass": "^1.56.1",
     "sb-svg2pdf-v13": "1.0.0",
